@startuml
' ShoppingCart, Item, and PaymentStrategy system class diagram

interface PaymentStrategy {
    {abstract} +pay(amount: int): None
}

class CreditCardPayment {
    ' -card_number: str
    +pay(amount: int): None
}

class PayPalPayment {
    ' -email: str
    +pay(amount: int): None
}

class BitcoinPayment {
    +pay(amount: int): None
}

PaymentStrategy <-- CreditCardPayment
PaymentStrategy <-- PayPalPayment
PaymentStrategy <-- BitcoinPayment

class Item {
    +name: str
    +price: int
}

class ShoppingCart {
    +payment_strategy: PaymentStrategy
    +items: list[Item]
    +add_item(item: Item): None
    +calculate_total(): int
    +checkout(): None
}

ShoppingCart *-- PaymentStrategy
ShoppingCart *-- Item 

@enduml
